2009-01-28  Hedayat Vatankhah  <hedayat@grad.com>

	* INSTALL: 
	- added new installation instructions (cmake oriented)
	
	* data/rsg/agent/nao/nao.rsg: 
	- disable VisionPerceptor
	
	* data/rsg/agent/nao/naoneckhead.rsg: 
	* data/rsg/agent/nao/naoleg.rsg: 
	* data/rsg/agent/nao/naoarm.rsg:
	- enabled RestrictedVisionPerceptor and ObjectState nodes 

2009-01-24  Hedayat Vatankhah  <hedayat@grad.com>

	* CMakeLists.txt: 
	* cmake_uninstall.cmake.in: 
	- added 'make uninstall' support
	
	* doc/users/CMakeLists.txt: 
	* cmake/UseLATEX.cmake: 
	- do not build users-manual.pdf by default. can be built using 'make pdf'
	- add an output to tell the user how it can build the manual

2009-01-20  Hedayat Vatankhah  <hedayat@grad.com>

	* rcssmonitor3d/Makefile.am: 
	- added rpath
	
	* rcssmonitor3d/rcssmonitor3d.rb: 
	- changed monitorspark.rb to rcssmonitor3d.rb
	
	* rcssmonitor3d/main.cpp (MonitorSpark::InitApp): 
	* simspark/main.cpp (SimSpark::InitApp): 
	- adding rcss3d's installation directory to the list of resource locations.
	
	* windows/rcssserver3d_config.h: 
	* configure.ac: 
	- added new define: RCSS_BUNDLE_PATH to store rcss3d's data directory.

2008-12-19  Hedayat Vatankhah  <hedayat@grad.com>

	* plugin/soccer/kickeffector/kickeffector.cpp: 
	* plugin/soccer/driveeffector/driveeffector.cpp: 
	* plugin/soccer/catcheffector/catcheffector.cpp: 
	* plugin/soccer/visionperceptor/visionperceptor.cpp: 
	* plugin/soccer/sayeffector/sayeffector.cpp: 
	* plugin/soccer/pantilteffector/pantilteffector.cpp: 
	* plugin/soccer/restrictedvisionperceptor/restrictedvisionperceptor.cpp: 
	* plugin/soccer/agentstateperceptor/agentstateperceptor.cpp: 
	- Replaced make_shared() with .lock() function call.(fixed compilation
	error with recent boost versions.) 