@@ -6,6 +6,17 @@ native build files for your system (e.g. Unix Makefiles, Eclipse CDT 4.0 project
 files, Visual Studio project files). You can generate build files using CMake
 command-line or GUI interfaces.
 
+Requirements
+============
+CMake version 2.6 or higher
+Simspark Library
+Boost C++ Libraries
+FreeType
+
+The following packages are optional:
+Latex (pdflatex): to generate developers manual
+Doxygen: to generate API documentation
+
 Basic Installation Using CMake Command-line Interface
 =====================================================
 1. Unpack the distribution and change directory to the top level source tree.
